{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 41,
  "lineage": "8e2ef162-e3d5-b6b2-089b-4f557faf5dc9",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346636883334:vpc/vpc-02fb7ee00a1cf83c7",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e0ab8a7f902fd8fe",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-01cb540bbd385ce51",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02fb7ee00a1cf83c7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fa8bf3647082044c",
            "owner_id": "346636883334"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:346636883334:loadbalancer/app/terraform-asg-example/ea6955dff9ef6692",
            "arn_suffix": "app/terraform-asg-example/ea6955dff9ef6692",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-asg-example-1804653962.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:346636883334:loadbalancer/app/terraform-asg-example/ea6955dff9ef6692",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-asg-example",
            "security_groups": [
              "sg-0fff873df9b30b25b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-029b9e7c13a43ad9e"
              },
              {
                "subnet_id": "subnet-03de35d9751327b62"
              },
              {
                "subnet_id": "subnet-064a92ec7b1e5913a"
              },
              {
                "subnet_id": "subnet-07f5794cb17bc1b94"
              },
              {
                "subnet_id": "subnet-09b45d228439c4842"
              },
              {
                "subnet_id": "subnet-0ebbd66a90e8daa28"
              }
            ],
            "subnets": [
              "subnet-029b9e7c13a43ad9e",
              "subnet-03de35d9751327b62",
              "subnet-064a92ec7b1e5913a",
              "subnet-07f5794cb17bc1b94",
              "subnet-09b45d228439c4842",
              "subnet-0ebbd66a90e8daa28"
            ],
            "vpc_id": "vpc-02fb7ee00a1cf83c7",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:346636883334:listener/app/terraform-asg-example/ea6955dff9ef6692/fcb854ba80b45f32",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:346636883334:listener/app/terraform-asg-example/ea6955dff9ef6692/fcb854ba80b45f32",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:346636883334:loadbalancer/app/terraform-asg-example/ea6955dff9ef6692",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.example",
            "aws_security_group.alb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:346636883334:targetgroup/terraform-asg-example/80dd5055bd4597c5",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:346636883334:listener-rule/app/terraform-asg-example/ea6955dff9ef6692/fcb854ba80b45f32/7c77371be4eb62b9",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:346636883334:listener-rule/app/terraform-asg-example/ea6955dff9ef6692/fcb854ba80b45f32/7c77371be4eb62b9",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:346636883334:listener/app/terraform-asg-example/ea6955dff9ef6692/fcb854ba80b45f32",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.example",
            "aws_lb_listener.http",
            "aws_lb_target_group.asg",
            "aws_security_group.alb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:346636883334:targetgroup/terraform-asg-example/80dd5055bd4597c5",
            "arn_suffix": "targetgroup/terraform-asg-example/80dd5055bd4597c5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:346636883334:targetgroup/terraform-asg-example/80dd5055bd4597c5",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "terraform-asg-example",
            "port": 8084,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02fb7ee00a1cf83c7"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346636883334:security-group/sg-0fff873df9b30b25b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fff873df9b30b25b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-example-alb",
            "name_prefix": "",
            "owner_id": "346636883334",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02fb7ee00a1cf83c7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:346636883334:security-group/sg-0b8ec2d7eea96a37c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b8ec2d7eea96a37c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8084,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8084
              }
            ],
            "name": "terraform-example-instance",
            "name_prefix": "",
            "owner_id": "346636883334",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02fb7ee00a1cf83c7"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    }
  ]
}